master - Added test cases for cacheImpl